opam-version: "2.0"
name: "dolmen"
version: "dev"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "BSD-2-clauses"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "menhir" {>= "20180703"}
  "dune" { >= "2.0" }
  "fmt" { >= "0.8.7" }
  "seq"
]

tags: [ "parser" "tptp" "logic" "smtlib" "dimacs" ]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "git+https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "http://gbury.github.io/dolmen"
synopsis: "A parser library"
description:
"Dolmen is a parser library. It currently targets languages used in automated theorem provers,
but may be extended ot other domains.

Dolmen provides functors that takes as arguments a representation of terms and statements,
and returns a module that can parse files (or streams of tokens) into the provided representation
of terms or statements. This is meant so that Dolmen can be used as a drop-in replacement of existing
parser, in order to factorize parsers among projects.

Additionally, Dolmen also provides a standard implementation of terms and statements that cna be
used ot instantiate its parsers."
