opam-version: "2.0"
name: "dolmen_bin"
version: "dev"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "BSD-2-Clause"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} "@doc" {with-doc}]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen" {= version }
  "dolmen_type" {= version }
  "dolmen_loop" {= version }
  "dolmen_model" {= version }
  "odoc" { with-doc }
  "dune" { >= "3.0" }
  "fmt"
  "cmdliner" { >= "1.1.0" }
  "pp_loc" { >= "2.0.0" }
  "mtime" {>= "1.1.0" & < "2.0.0" }
# These two are currently vendored
#  "progress"
#  "terminal"
# thus we need their deps
  "stdlib-shims"
  "fmt" {>= "0.8.5"}
  "logs" {>= "0.7.0"}
  "uucp" {>= "2.0.0"}
  "uutf" {>= "1.0.0"}
  "vector"
  "optint" {>= "0.1.0"}
]
depopts: [
  "memtrace"
]
tags: [ "logic" "computation" "automated theorem prover" "logic" "smtlib" "tptp"]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "git+https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "https://gbury.github.io/dolmen"
synopsis: "A linter for logic languages"
description:
"The dolmen binary is an instantiation of the Dolmen library
to provide a binary to easily parse and type files used in
automated deduction. "
