opam-version: "2.0"
name: "dolmen_bin"
version: "dev"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "BSD-2-Clause"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} "@doc" {with-doc}]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen" {= version }
  "dolmen_type" {= version }
  "dolmen_loop" {= version }
  "dolmen_model" {= version }
  "dune" { >= "3.0" }
  "dune-site" { >= "3.0" }
  "fmt"
  "cmdliner" { >= "1.1.0" }
  "odoc" { with-doc }
]
depopts: [
  "memtrace"
]
tags: [ "logic" "computation" "automated theorem prover" "logic" "smtlib" "tptp"]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "git+https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "https://gbury.github.io/dolmen"
synopsis: "A linter for logic languages"
description:
"The dolmen binary is an instantiation of the Dolmen library
to provide a binary to easily parse and type files used in
automated deduction, as well as verify models from theorem solvers."
