opam-version: "1.2"
name: "dolmen_lsp"
version: "dev"
author: "Guillaume Bury"
maintainer: "guillaume.bury@gmail.com"
license: "BSD-2-clauses"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen" {= version }
  "dolmen_type" {= version }
  "dolmen_loop" { = version }
  "dune" { >= "2.7" }
  "lsp"
  "ocaml-syntax-shims"
  "odoc" { with-doc }
  "linol"
  "linol-lwt"
]
pin-depends: [
  [ "linol.dev" "git+https://github.com/c-cube/linol.git" ]
  [ "linol-lwt.dev" "git+https://github.com/c-cube/linol.git" ]
  ]
tags: [ "logic" "computation" "automated theorem prover" "lsp" "language server protocol"]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "http://gbury.github.io/dolmen"
synopsis: "A LSP server for automated deduction languages"
