opam-version: "2.0"
name: "dolmen_lsp"
version: "dev"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "BSD-2-Clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen" {= version }
  "dolmen_type" {= version }
  "dolmen_loop" { = version }
  "dune" { >= "2.7" }
  "ocaml-syntax-shims"
  "odoc" { with-doc }
  "logs"
  "lsp"
  "linol" { >= "0.1" & < "0.2" }
  "linol-lwt" { >= "0.1" & < "0.2" }
]
tags: [ "logic" "computation" "automated theorem prover" "lsp" "language server protocol"]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "git+https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "http://gbury.github.io/dolmen"
synopsis: "A LSP server for automated deduction languages"
