opam-version: "1.2"
name: "dolmen_typecheck"
version: "dev"
author: "Guillaume Bury"
maintainer: "guillaume.bury@gmail.com"
license: "BSD-2-clauses"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen"
  "spelll"
  "uutf"
  "dune"
]
tags: [ "logic" "type" "typechecking" "first order" ]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "http://gbury.github.io/dolmen"
synopsis: "A typechecker for automated deduction languages"
