opam-version: "2.0"
name: "dolmen_typecheck"
version: "dev"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "BSD-2-Clause"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dolmen" {= version }
  "dune" { >= "2.7" }
  "spelll"
  "uutf"
  "odoc" { with-doc }
]
tags: [ "logic" "type" "typechecking" "first order" "polymorphism" ]
homepage: "https://github.com/Gbury/dolmen"
dev-repo: "git+https://github.com/Gbury/dolmen.git"
bug-reports: "https://github.com/Gbury/dolmen/issues"

doc: "http://gbury.github.io/dolmen"
synopsis: "A typechecker for automated deduction languages"
