
; Check that the doc still builds
(mdx
  (package dolmen_loop)
  (deps example.smt2 typing_error.smt2)
  (libraries
    dolmen
    ; a lot of dolmen
    dolmen_intf dolmen_std dolmen_line
    ; typing & loop
    dolmen_type dolmen_loop
    ; Dolmen languages
    dolmen_ae dolmen_dimacs dolmen_icnf dolmen_zf
    ; tptp
    dolmen_tptp dolmen_tptp_v6_3_0
    ; smtlib2
    dolmen_smtlib2 dolmen_smtlib2_poly
    dolmen_smtlib2_v6 dolmen_smtlib2_v6_script dolmen_smtlib2_v6_response
    ; Dolmen classes
    dolmen_class
   )
  ; mdx support for windows is not yet perfect,
  ; see e.g. https://github.com/realworldocaml/mdx/issues/295
  ; thus we disable mdx inder windows for now
  (enabled_if (= %{os_type} Unix))
)
