
(documentation (package dolmen))

(library
  (name           dolmen)
  (public_name    dolmen)
  (libraries
    ; Generic dolmen sub-libs
    dolmen_intf dolmen_std dolmen_line
    ; Dolmen languages
    dolmen_ae dolmen_dimacs dolmen_icnf
    dolmen_tptp dolmen_smtlib2 dolmen_zf
    ; Dolmen classes
    dolmen_class
    ; extension support
    dune-site dune-site.plugins
  )
  (modules        Dolmen Sites)
)

(generate_sites_module
  (module Sites)
  (plugins (dolmen plugins)))
