(library
  (name           dolmen_model)
  (public_name    dolmen_model)
  (instrumentation (backend bisect_ppx))
  (libraries
    ; external deps
    ; dolmen standard deps
    dolmen dolmen.std dolmen.intf zarith farith ppx_deriving.runtime
  )
  (modules
    ; Model checking
    Value Env Eval
    ; Builtins
    Array Bool Core Fun Int Rat Real Bitv Fp
    ; Helpers
  )
)
