(library
  (name           dolmen_model)
  (public_name    dolmen_model)
  (instrumentation (backend bisect_ppx))
  (libraries
    ; external deps
    ; dolmen standard deps
    dolmen dolmen.std dolmen.intf
    ; dolmen loop
    dolmen_loop
    ; other deps
    zarith
  )
  (modules
    ; Model checking
    Value Env Eval
    ; Builtins
    Adt Array Bool Core Fun Int Rat Real Bitv
    ; Loop Pipe
    Loop
  )
)
