(library
  (name           dolmen_std)
  (public_name    dolmen.std)
  (libraries      dolmen_intf dolmen_line fmt)
  (instrumentation (backend bisect_ppx))
  (flags :standard -warn-error -3)
  (modules
    ; Helpers
    Msg Tok Vec Misc Escape Transformer
    ; Parsed AST
    Loc Id Term Statement Normalize
    ; Typed AST
    Tag Pretty Builtin Expr
   )
)
