(library
  (name           dolmen_type)
  (public_name    dolmen_type)
  (instrumentation (backend bisect_ppx))
  (libraries
    ; external deps
    spelll uutf
    ; dolmen standard deps
    dolmen dolmen.std dolmen.intf
    ; some additional explicit deps for version types
    dolmen.smtlib2 dolmen.tptp
  )
  (modules
    ; Helpers
    Base Logic Misc
    ; TFF typechecking
    Type Core Def Arith Arrays Bitv Float Strings
  )
)
