; File generated for tests by a script

; Test for find_bigger.zf
(rule
  (target  find_bigger.output)
  (deps    find_bigger.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff find_bigger.output find_bigger.expected))
)

; Test for length.zf
(rule
  (target  length.output)
  (deps    length.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff length.output length.expected))
)

; Test for mult_3000.zf
(rule
  (target  mult_3000.output)
  (deps    mult_3000.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff mult_3000.output mult_3000.expected))
)

; Test for mult_300.zf
(rule
  (target  mult_300.output)
  (deps    mult_300.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff mult_300.output mult_300.expected))
)

; Test for mult.zf
(rule
  (target  mult.output)
  (deps    mult.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff mult.output mult.expected))
)

; Test for pair.zf
(rule
  (target  pair.output)
  (deps    pair.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff pair.output pair.expected))
)

; Test for plist.zf
(rule
  (target  plist.output)
  (deps    plist.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff plist.output plist.expected))
)

; Test for plus.zf
(rule
  (target  plus.output)
  (deps    plus.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff plus.output plus.expected))
)

; Test for sets.zf
(rule
  (target  sets.output)
  (deps    sets.zf)
  (package dolmen_bin)
  (action (chdir %{workspace_root} (with-outputs-to %{target} (run dolmen %{deps}))))
)
(rule
  (alias runtest)
  (action (diff sets.output sets.expected))
)

