
; Language library definition
(library
  (name           dolmen_ae)
  (public_name    dolmen.ae)
  (instrumentation (backend bisect_ppx))
  (libraries      dolmen_std dolmen_intf menhirLib)
  (modules        Dolmen_ae Tokens Lexer Parser Ast Syntax_messages)
)

; Common include
(include ../dune.common)
