
(ocamllex (modules lexDimacs))

(menhir
 (flags (--only-tokens))
 (modules tokens_dimacs)
)

(menhir
 (flags (--explain --table --external-tokens Tokens_dimacs))
 (modules tokens_dimacs parseDimacs)
 (merge_into parseDimacs)
)

(library
  (name           dolmen_dimacs)
  (public_name    dolmen.dimacs)
  (libraries      dolmen_std menhirLib)
  (modules        Tokens_dimacs LexDimacs ParseDimacs Ast_dimacs Dolmen_dimacs)
)
