
(ocamllex (modules lexiCNF))

(menhir
 (flags (--only-tokens))
 (modules tokens_iCNF)
)

(menhir
 (flags (--explain --table --external-tokens Tokens_iCNF))
 (modules tokens_iCNF parseiCNF)
 (merge_into parseiCNF)
)


(library
  (name           dolmen_icnf)
  (public_name    dolmen.icnf)
  (libraries      dolmen_std menhirLib)
  (modules        Tokens_iCNF LexiCNF ParseiCNF Ast_iCNF Dolmen_icnf)
)
